         widget UI files to the ui subdirectory, remove remnants of the GGI UI
         (Fred).
20080502 ui/gtk/{Makefile.am,gtkdisplay.c},
         ui/scaler/{Makefile.am,scaler.[ch],scaler_hq[23]x.c,
         scaler_internals.h,scalers.c},ui/sdl/sdldisplay.c,
         ui/win32/win32display.c,ui/xlib/xdisplay.c: add HQ2x and HQ3x scalers
         (patch #1952304) (Gergely Szasz).
20080511 ui/scaler/scalers.c: fix green8_Mask and green16_Mask for 555 16 bit
         graphics modes and for 888 32 bit big endian graphics modes (Fred).
20080513 ui/fb/fbdisplay.c: ensure framebuffer display is restored on all
         errors (patch #1912101).
20080517 Makefile.am,fuse.c,mempool.[ch],unittests/unittests.c: add simple
	 memory pool code.
20080518 screenshot.c: missed file from patch #1952304 (Gergely Szasz).
20080518 machines/specplus3.h: remove reference to old specplus3_disk_present
         (Fred).
20080522 ui/{fb/fbdisplay.c,widget/Makefile.am}: fix compilation failures
	 (Stuart).
20080523 compat/unix/osname.c: uname() returns a positive integer on success
         on OpenSolaris (thanks, Andrew Owen) (Fred).
20080526 debugger/{breakpoint.c,command.c,commandy.y,debugger.c,
	 debugger_internals.h,expression.c}: ensure memory is not leaked when
	 parsing expressions.
20080526 debugger/{Makefile.am,breakpoint.c,breakpoint.h,commandl.l,commandy.y,
	 debugger.c,debugger.h,debugger_internals.h,event.c},mempool.c,
	 mempool.h,tape.c,ui/gtk/debugger.c: add "debugger events" where the
	 debugger can stop when certain events happen. So far, only "tape
	 playing" implemented.
20080527 debugger/{breakpoint.c,debugger_internals.h,event.c}: allow event
         breakpoints to be set only if the appropriate event is registered.
20080528 z80/z80.pl: emulate C, H and P/V on repeated I/O instructions.
20080528 z80/z80.pl: can't modify HL until contention has happened.
20080528 unittests/unittests.c: fix warning (Stuart).